# gamealloc

./: .gitignore  README.md  examples.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: pytest.yaml
gamealloc/: __init__.py  allocation.py  instance.py  manipulation.py  pareto.py  preference.py  sp.py  ttc.py
src/gamealloc/: allocation.py  preference.py
tests/: test_allocation.py  test_instance.py  test_manipulation.py  test_pareto.py  test_preference.py  test_sp.py  test_ttc.py
